# Tidol

./: .env.production  .gitignore  .temp_replace.py  .temp_toggleVox.js  Caddyfile  Caddyfile.prod  Dockerfile.caddy  FORZAR_ResetLetras.bat  LICENSE  LimpiarCacheLetras.bat  README.es.md  README.md  README_EN.md  Tidol.bat  cleanup_legacy_tables.sql  compose.yaml  deploy.sh  diff_spectra.txt  docker-compose.yml  package-lock.json  root.crt  schema_full.sql  search_kanye.json  style.css
.jules/: bolt.md
backend/: .dockerignore  .env  Dockerfile  audioQuality.js  check-duplicates.js  check_db.js  check_proxies.js  cleanup_lyrics.js  debug-vibrant.js  debug_db.js  duplicates-report.txt  force_cleanup_lyrics.js  force_schema.js  generateLyricsSQL.js  package-lock.json  package.json  repair_db.js  reproduce_error.js  reproduce_like.js  rescue_library.js  restore.js  server.js  server22.js  spectra-server.js  test_spectra_api.js  update_db_proxies.js
backend/UsersLogin/: users.json
backend/controllers/: albumesController.js  auth.controller.js  colors.controller.js  history.controller.js  music.controller.js  playlistsController.js  spectra.controller.js  upload.controller.js
backend/core/: ProviderManager.js
backend/db/: database1.txt  database21.sqlite  db
backend/middleware/: auth.middleware.js  internal.middleware.js
backend/models/: database.sqlite  database.sqlite-shm  database.sqlite-wal  database.sqlite.corrupt.1764145457564  database.sqlite.corrupt.1764145684615  db.js  schema.sql
backend/routes/: albumes.js  auth.js  auth.routes.js  canciones.js  canciones1.js  colors.routes.js  history.routes.js  image.routes.js  music.routes.js  playlists.js  spectra.routes.js  upload.routes.js
backend/scripts/: processColors.js
backend/services/: colorExtraction.service.js  coverService.js  iaProxy.service.js  imageOptimizer.js  mediaCache.service.js  music.service.js
backend/utils/: imageDownloader.js  metadata.js  responseFormatter.js
backend/warp-farm/: clean_farm.bat  docker-compose.yml  generate_farm.cjs  setup_farm.bat
frontend/: App.js  style.css
frontend/protected/: Esto lo dejo para despues.txt  album.css  albumIA.html  albumPlayer.css  album_dev.html  albumes_dev.html  artist.css  artista_dev.html  artistas_dev.html  banner.css  base_dev.html  buscar_dev.html  cardsAlbum.css  index_dev.html  login.html  perfil_dev.html  responsive.css  sidebar-ia.css  style.css  style1.css  subir_dev.html
frontend/public/: AlbumInternetA.html  album.html  albumPlayer.css  albumes.html  artista.html  artistas.html  banner.css  buscar.html  cardsAlbum.css  index.html  login.html  player.html  sstyle.css  styles_dev.css  subir.html  subirArtistaFoto.html  subirFotoPerfil.html  subirfotodeperfil.js  toggle.css
migrations/: 003_play_history_indexes.sql
tidol-spectra/: .dockerignore  .env  Dockerfile  _demucs_helper.js  analyze_dj.py  analyzer.py  auto_ingest.js  batch_processor.js  check_gpu.py  dj_brain.py  download_model.py  requirements.txt  server.js  spectra.db-shm  spectra.db-wal  spectra_server.py  vox.py  vox_demucs.py  voxw.py
tidol-ui/: .gitignore  Dockerfile  index.html  package.json  postcss.config.js  tailwind.config.js  vite.config.js
tidol-ui/hooks/: useArtistMapper.js  useArtists.js
tidol-ui/src/: App.jsx  AppBlur.css  index.css  main.jsx
tidol-workspace/: .dockerignore  .gitignore  Cargo.toml  MIGRATION_AUDIT.md  fix2.py  fix3.py  fix_main.py  schema_discography.sql  test_security.py  update_indexes.sql  update_main.py  update_playlist_positions.sql  update_playlists.sql  update_schema.sql
tidol-workspace/.cargo/: config.toml
tidol-workspace/.sqlx/: query-0115f77d28f8a018eb22edb7b7600b6018a9704642f8ee7ddeff00a0ab67160b.json  query-020257fa9f0b977c5dedb0555311b75aa12eb9b9eefbaffcbd16f3dee76d0479.json  query-0284f974558718727aaed778effb6cf8bbd869ba189b7d561f768d9913443825.json  query-03839217b8d2114f2e022b5df6bfe837b94a80b8ce27b5803e0ef2787ec897cd.json  query-03a99e877d89f6b28d209ed4c3f27076a83031e09f225a667f79f841ad65cc1c.json  query-05be0629c517e1e9587923e7270b16bb241fe69eafae71b8be2465cf994fcf27.json  query-05dc6075f3a36124df38d2ac807b02e7b785e669af67ad7d075342dda6ba5a19.json  query-08a8154a1ca1431c2a6cd1e3dc046b5b825b21ec6cf0ba53850a40b8ed2bd785.json  query-0cac4bbc74c8c8ec0ef411ccd8bc6521f3777e5c7bc862beca47aa8fab52b7fe.json  query-0caf0e61cbcf692e9c500b84a7bde07b9acf043b81c3e4d370797e93df7dd168.json  query-0ee42896087e11f5e08087e47bf84032f3c09f0463a3317ae555b96aa80a4f30.json  query-0f49d3a85f1151657726855f9cf9874d8dcc375b87cdbb4c7b73688ef9cfff0a.json  (+41 more)
tidol-workspace/bad_engine/: Cargo.toml
tidol-workspace/bad_engine/src/: lyrics_fetcher.rs  main.rs  orchestrator.rs
tidol-workspace/docs/: ABOUT.md  DMCA_POLICY.md  (+2 more)
tidol-workspace/plugins/provider-ai/: CMakeLists.txt  build.sh
tidol-workspace/plugins/provider-ai/src/: ai_plugin.cpp
tidol-workspace/plugins/provider-archive/: Cargo.toml
tidol-workspace/plugins/provider-archive/src/: lib.rs
tidol-workspace/plugins/provider-jamendo/: Cargo.toml
tidol-workspace/plugins/provider-jamendo/src/: lib.rs
tidol-workspace/tidol-core/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  postgresql_migration.sql
tidol-workspace/tidol-core/scratch/: refactor.py  refactor2.py  replace_println.py
tidol-workspace/tidol-core/src/: auth.rs  catalog.rs  config.rs  error.rs  lib.rs  library.rs  lyrics.rs  main.rs  media.rs  models.rs  orchestrator.rs  proxy.rs  user_data.rs
tidol-workspace/tidol-core/src/providers/: archive.rs  mod.rs  provider_trait.rs  soundcloud.rs  spotify.rs  waterfall.rs  youtube.rs
tidol-workspace/tidol-core/tests/: db_integration.rs
tidol-workspace/tidol-server/: Cargo.toml
tidol-workspace/tidol-server/src/: error.rs  handlers.rs  main.rs  state.rs
tidol-workspace/tidol-shell/: Cargo.toml  README.md
tidol-workspace/tidol-shell/src/: error.rs  logbuf.rs  main.rs  repl.rs
tidol-workspace/tidol-shell/src/backend/: local.rs  mod.rs  remote.rs
tidol-workspace/tidol-shell/src/commands/: mod.rs
tidol-workspace/tidol-shell/src/render/: mod.rs
(+487 files in other folders)
