[package]
name = "bad_engine"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.13.4", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.7.4", features = ["mysql", "runtime-tokio", "runtime-tokio-rustls"] }
tokio = { version = "1.52.3", features = ["full"] }
urlencoding = "2.1.3"
tracing = "0.1"
tracing-subscriber = "0.3"
dotenvy = "0.15.7"
