[package]
name = "tidol-core"
version = "0.2.0"
edition = "2021"

[dependencies]
libloading = "0.8"
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["socks", "json", "stream"] }
sqlx = { version = "0.7", features = ["mysql", "runtime-tokio-rustls", "macros", "time"] }
dotenvy = "0.15"
musicbrainz_rs = { version = "0.13.0", features = ["async"] }
urlencoding = "2.1"
unicode-normalization = "0.1"
futures = "0.3"
futures-util = "0.3"
tokio-stream = "0.1"
jsonwebtoken = "9"
argon2 = "0.5"
uuid = { version = "1.8", features = ["v4"] }
tower_governor = { version = "0.5", features = ["axum"] }
image = "0.25.10"
axum-extra = "0.12.6"
color-thief = "0.2.2"
tokio-util = "0.7.18"
tower-http = { version = "0.6.11", features = ["cors"] }
async-trait = "0.1.89"
base64 = "0.22"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
moka = { version = "0.12", features = ["future"] }
