[package]
name = "tidol-core"
version = "0.2.0"
edition = "2021"

[features]
# Marcador de posición para futura reproducción desde biblioteca local.
# Sin implementación detrás por ahora.
local-library = []
# Expone TidolCore::new_disconnected para pruebas de otros crates (p.ej. las
# del middleware de tidol-server): núcleo real con pool perezoso sin BD viva.
test-util = []
# Habilita las pruebas de integración contra una BD de prueba dedicada
# (tests/db_integration.rs). Ver el encabezado de ese fichero para el cómo.
db-tests = []

[dependencies]
libloading = "0.8"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["socks", "json", "stream"] }
sqlx = { version = "0.7", features = ["mysql", "runtime-tokio-rustls", "macros", "time"] }
dotenvy = "0.15"
musicbrainz_rs = { version = "0.13.0", features = ["async"] }
urlencoding = "2.1"
unicode-normalization = "0.1"
futures = "0.3"
futures-util = "0.3"
tokio-stream = "0.1"
jsonwebtoken = "9"
argon2 = "0.5"
uuid = { version = "1.8", features = ["v4"] }
image = "0.25.10"
color-thief = "0.2.2"
tokio-util = "0.7.18"
async-trait = "0.1.89"
base64 = "0.22"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
moka = { version = "0.12", features = ["future"] }
