[package]
name = "provider-archive"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
urlencoding = "2.1"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"] }
percent-encoding = "2.3"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
